--- a/index.html
+++ b/index.html
@@ -549,8 +549,7 @@
                         blanditiis in fugiat tempore necessitatibus aliquid. Id adipisci, rem corrupti 
                         asperiores distinctio delectus quae quia tenetur totam laboriosam quam. Lorem ipsum, 
                         dolor sit amet consectetur adipisicing elit. Dolores soluta ullam ipsa voluptates 
-                        repudiandae dignissimos deleniti mollitia eum. Laudantium placeat velit nemo illo 
-                        pariatur. Fuga aperiam impedit illo atque repellendus!
+                        repudiandae dignissimos deleniti mollitia eum.
                     </p>
 
                 </div>
@@ -586,8 +585,7 @@
                         blanditiis in fugiat tempore necessitatibus aliquid. Id adipisci, rem corrupti 
                         asperiores distinctio delectus quae quia tenetur totam laboriosam quam. Lorem ipsum, 
                         dolor sit amet consectetur adipisicing elit. Dolores soluta ullam ipsa voluptates 
-                        repudiandae dignissimos deleniti mollitia eum. Laudantium placeat velit nemo illo 
-                        pariatur. Fuga aperiam impedit illo atque repellendus!
+                        repudiandae dignissimos deleniti mollitia eum. 
                     </p>
 
                 </div>
@@ -623,8 +621,7 @@
                         blanditiis in fugiat tempore necessitatibus aliquid. Id adipisci, rem corrupti 
                         asperiores distinctio delectus quae quia tenetur totam laboriosam quam. Lorem ipsum, 
                         dolor sit amet consectetur adipisicing elit. Dolores soluta ullam ipsa voluptates 
-                        repudiandae dignissimos deleniti mollitia eum. Laudantium placeat velit nemo illo 
-                        pariatur. Fuga aperiam impedit illo atque repellendus!
+                        repudiandae dignissimos deleniti mollitia eum. 
                     </p>
 
                 </div>
@@ -660,8 +657,7 @@
                         blanditiis in fugiat tempore necessitatibus aliquid. Id adipisci, rem corrupti 
                         asperiores distinctio delectus quae quia tenetur totam laboriosam quam. Lorem ipsum, 
                         dolor sit amet consectetur adipisicing elit. Dolores soluta ullam ipsa voluptates 
-                        repudiandae dignissimos deleniti mollitia eum. Laudantium placeat velit nemo illo 
-                        pariatur. Fuga aperiam impedit illo atque repellendus!
+                        repudiandae dignissimos deleniti mollitia eum. 
                     </p>
 
                 </div>
@@ -855,7 +851,7 @@
 
         </div>
 
-        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> WT Master Code</span></p>
+        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> Khan Meraj</span></p>
 
     </footer>
 
